<resources>
    <string name="app_name">GeoSensor</string>
    <string name="deleteMessage">Do you want to delete this measurement reading?</string>
    <string name="deleteEntry">Delete entry?</string>
    <string name="location">Location</string>
    <string name="title_activity_main_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="action_map_view">Map view</string>
    <string name="action_list_view">List view</string>
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>
    <string name="preferences">Settings</string>
    <string name="pref_key_location_switch" translatable="false">pref_key_location_switch</string>
    <string name="location_switch_title">Use Android Location</string>
    <string name="location_switch_summary">Enables use of Android GPS location in addition to Arduino GPS.</string>
    <string name="location_disabled">The use of the Android-devices location has been disabled</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="details">Details</string>
    <string name="date">Date: %1$s</string>
    <string name="time">Time: %1$s</string>
    <string name="lat">Latitude: %1$s</string>
    <string name="lng">Longitude: %1$s</string>
    <string name="position_card_title">Position (%1$s)</string>
    <string name="filter_start_time">Set Start Time</string>
    <string name="filter_end_time">Set End Time</string>
    <string name="filter_place">Filter by Place</string>
    <string name="filter_dialog_title">Select Filter</string>
    <string name="filter_remove">Remove Filter</string>
    <string name="pref_key_bluetooth_basic" translatable="false">pref_key_bluetooth_basic</string>
    <string name="bluetooth_switch_basic_title">Enable Bluetooth Connections</string>
    <string name="bluetooth_switch_basic_summary">Enable this to receive data from the selected bluetooth device.</string>
    <string name="pref_key_bluetooth_admin" translatable="false">pref_key_bluetooth_admin</string>
    <string name="bluetooth_switch_admin_title">Search for compatible devices automatically</string>
    <string name="bluetooth_switch_admin_summary">Allow the app to search for compatible sensor transducer devices</string>
    <string name="measured_values">Measured Values</string>
    <string name="bluetooth_connected">GeoSensor is connected via Bluetooth</string>
    <string name="bluetooth_active">GeoSensor active</string>
    <string name="bluetooth_active_text">Connected: %1$s</string>
    <string name="bluetooth_failed">Bluetooth connection failed</string>
    <string name="measure_data_card_title">Measured Value</string>
    <string name="measure_data_name">Name: %1$s</string>
    <string name="measure_data_type">Sensor Type: %1$s</string>
    <string name="measure_data_value">Value: %1$f %2$s</string>
    <string name="altitude">Altitude: %1$f</string>
    <string name="accuracy">Accuracy: %1$f</string>
    <string name="filter_time">Filter by Time</string>
    <string name="pref_key_gps_background" translatable="false">pref_key_gps_background</string>
    <string name="gps_background">Background GPS</string>
    <string name="gps_background_summary">The app will permanently try to get the GPS position. This will improve position accuracy, but reduce battery lifetime of the phone.</string>
    <string name="loading">fetching address</string>
    <string name="address_format">Address: %1$s, %2$s</string>
    <string name="title_activity_details_maps">Details</string>
    <string name="arduino_software">Arduino software version: %1$s</string>
    <string name="receive_date">Receive date: %1$s</string>
    <string name="receive_time">Receive time: %1$s</string>
    <string name="arduino_time">Arduino uptime: %1$d</string>
    <string name="card_general_info_title">General Information</string>
    <string name="no_location_message">There is no position saved for this data set.</string>
    <string name="action_export">Export data</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">Select Device</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="pref_key_select_bluetooth" translatable="false">pref_key_select_bluetooth</string>
    <string name="bluetooth_selector_title">Select Device</string>
    <string name="bluetooth_selector_summary">Select the compatible Bluetooth device to get data from</string>
    <string name="device_list">Device List</string>
    <string name="action_open_external">Open spreadsheet</string>
    <string name="no_spreadsheet_application">No App found</string>
    <string name="no_spreadsheet_application_message">There is no suitable app (e.g. Microsoft Excel) installed to open files from this app.</string>
    <string name="no_export_application">No App found</string>
    <string name="no_export_application_message">There is no suitable app (like Google Drive or Dropbox) installed to export the data to.</string>
    <string name="request_write_external_storage_title">Permission needed</string>
    <string name="request_write_external_storage_message">In order to make the file available to external apps, this app needs the permision to write to external storage. You will now be asked to grant this permission.</string>
    <string name="pref_key_csv_separator" translatable="false">pref_key_csv_separator</string>
    <string name="csv_separator_title">CSV separator</string>
    <string name="csv_separator_summary">Define the separator character used in export files. This choice depends on the program you want to use the data with, normally a comma will work fine.</string>
    <string name="pref_key_decimal_mark" translatable="false">pref_key_decimal_mark</string>
    <string name="decimal_mark_title">Decimal Mark</string>
    <string name="decimal_mark_summary">Decimal mark to use in exported csv-files. Using a full stop is strongly recommended, but for Excel imports you might need your local symbol. Must be different from the csv separator.</string>
    <string name="csv_separator_decimal_mark_warning_message">You should not use the same symbol as csv-separator and decimal mark as this will make the generated documents unreadable. Please change either the csv-separator or the decimal mark.</string>
    <string name="saved_file">File Saved</string>
    <string name="saved_file_message">The exported file was saved to the following path: \"%1$s\" You can open the file using other apps or transfer it using USB.</string>
    <string name="comment">Comment</string>
    <string name="edit">Edit</string>
    <string name="edit_comment_title">Edit Comment</string>
    <string name="filter_start_time_set">Set Start Time (is %1$s)</string>
    <string name="filter_end_time_set">Set End Time (is %1$s)</string>
    <string name="filter_removed">Filters Removed</string>
    <string name="pref_key_incoming_data_notification" translatable="false">pref_key_incoming_data_notification</string>
    <string name="incoming_data_setting_title">Incoming Notification</string>
    <string name="incoming_data_setting_summary">Show a notification when the app receives data.</string>
    <string name="data_received">GeoSensor received data</string>
    <string name="humidity">Humidity</string>
    <string name="potentiometer">Potentiometer</string>
    <string name="temperature">Temperature</string>
    <string name="bluetooth_searching">GeoSensor is searching for compatible devices</string>
    <string name="pref_export">Data Export</string>
    <string name="pref_position">Position</string>
    <string name="pref_bluetooth">Bluetooth Connection</string>
    <string name="pref_database">Data</string>
    <string name="pref_key_delete_old" translatable="false">pref_key_delete_old</string>
    <string name="delete_old_title">Delete old data</string>
    <string name="delete_old_summary">Delete old data from the applications database. You will be able to select the cut-off date.</string>
    <string name="pref_key_drop_database" translatable="false">pref_key_drop_database</string>
    <string name="drop_database_title">Delete all Data</string>
    <string name="drop_database_summary">Delete all recorded measurements. The settings will not be affected.</string>
    <string name="drop_database">Delete all Measurement Data?</string>
    <string name="drop_database_message">Permanently and irrevocably delete all measurement data.</string>
    <string name="delete_old">Delete old Measurements?</string>
    <string name="delete_old_message">Delete all measurements recorded before %1$s?</string>
    <string name="sort_oldest_first">Oldest first</string>
    <string name="sort_newest_first">Newest first</string>
    <string name="sort_dialog_title">Sort sequence</string>
    <string name="export_best_position_summary">Export only the best position available for a measurement. This will give the export data a more regular structure.</string>
    <string name="export_best_position">Export only Best Position</string>
    <string name="pref_key_export_best_position" translatable="false">pref_key_export_best_position</string>
    <string name="acquireNotConnected">There is no device connected.</string>
    <string name="action_acquire_data">Start Measurement</string>
    <string name="pref_key_show_acquire_data" translatable="false">pref_key_show_acquire_data</string>
    <string name="show_acquire_data_title">Show Trigger for Measurement</string>
    <string name="show_acquire_data_summary">Show a item in the menu to trigger a measurement on the transducer device. This is only useful if the transducer supports this feature.</string>
    <string name="pref_key_request_resend" translatable="false">pref_key_request_resend</string>
    <string name="request_resend_title">Request Resend</string>
    <string name="request_resend_summary">Request the transducer to resend the last measurement. This is useful if you feel the last measurement was lost somehow. Not ll transducers support this feature.</string>
    <string name="pref_transducer">Transducer Device</string>
    <string name="pref_key_transducer" translatable="false">pref_key_transducer</string>
    <string name="angular_frequency">Angular Frequency</string>
    <string name="absorbed_dose">Absorbed Dose</string>
    <string name="acceleration">Acceleration</string>
    <string name="amount_of_substance">Amount of Substance</string>
    <string name="angle">Angle</string>
    <string name="angular_acceleration">Angular Acceleration</string>
    <string name="angular_velocity">Angular Velocity</string>
    <string name="area">Area</string>
    <string name="capacitance">Capacitance</string>
    <string name="catalytic_activity">Catalytic Activity</string>
    <string name="density">Density</string>
    <string name="efficiency">Efficiency</string>
    <string name="electric_charge">Electric Charge</string>
    <string name="electric_current">Electric Current</string>
    <string name="electric_resistance">Electric Resistance</string>
    <string name="electrical_conductance">Electrical Conductance</string>
    <string name="energy">Energy</string>
    <string name="equivalent_dose">Equivalent Dose</string>
    <string name="force">Force</string>
    <string name="frequency">Frequency</string>
    <string name="illuminance">Illuminance</string>
    <string name="inductance">Inductance</string>
    <string name="length">Length</string>
    <string name="luminous_flux">Luminous Flux</string>
    <string name="wavelength">Wavelength</string>
    <string name="volume">Volume</string>
    <string name="action_delete">Delete this Record</string>
    <string name="action_about">About GeoSensor</string>
</resources>